Fix update endpoint + Add find all user announcements
